[package]
name = "baseplug_mpe_test"
version = "0.1.0"
edition = "2021"
authors = ["Fraccy"]
license = "MIT"

[dependencies]
serde = {version = "^1.0.159", default-features = false}
baseplug = { git = "https://github.com/wrl/baseplug.git", package = "baseplug" }
ringbuf = "0.3.3"

[lib]
name = "baseplug_mpe_test"
path = "src/baseplug_mpe_test.rs"
crate-type = ["cdylib"]
